--- a/4.cloud-basics.md
+++ b/4.cloud-basics.md
@@ -6,15 +6,15 @@ The aim of this challenge is to set up the cloud environment on which the projec
 
 2. Create the **networking infrastructure** on which your application will live.  
 
-2.1 Setup a custom VPC. 
+  * Setup a custom VPC. 
 
-2.2 Create the subnets.  
+  * Create the subnets.  
 
-2.3 Setup route tables for all subnets.  
+  * Setup route tables for all subnets.  
 
-2.4 Set up a connection to the internet (Internet Gateway and NAT). 
+  * Set up a connection to the internet (Internet Gateway and NAT). 
 
-2.5 Configure security for your subnets (Network ACLs) 
+  * Configure security for your subnets (Network ACLs) 
 
 **Note:** Because of constrains with the training AWS account, you may be required to use an existing networking infrastructure. In that case, explain your tutor each the elements involved and how they relate to each other. Make sure you don’t skip this step; networking is an essential part of what we do! 
 
