--- a/4.cloud-basics.md
+++ b/4.cloud-basics.md
@@ -5,11 +5,11 @@ The aim of this challenge is to set up the cloud environment on which the projec
 
 
 2. Create the **networking infrastructure** on which your application will live.  
-  * Setup a custom VPC. 
-  * Create the subnets.  
-  * Setup route tables for all subnets.  
-  * Set up a connection to the internet (Internet Gateway and NAT). 
-  * Configure security for your subnets (Network ACLs) 
+...* Setup a custom VPC. 
+...* Create the subnets.  
+...* Setup route tables for all subnets.  
+...* Set up a connection to the internet (Internet Gateway and NAT). 
+...* Configure security for your subnets (Network ACLs) 
 
 **Note:** Because of constrains with the training AWS account, you may be required to use an existing networking infrastructure. In that case, explain your tutor each the elements involved and how they relate to each other. Make sure you don’t skip this step; networking is an essential part of what we do! 
 
