--- a/4.cloud-basics.md
+++ b/4.cloud-basics.md
@@ -16,13 +16,13 @@ The aim of this challenge is to set up the cloud environment on which the projec
 
 3. We will create the ec2 infrastructure to support the application. If the application has one backend and one fronted, you will need to create one for each.  
 
-3.1 Create a load balancer. 
+  * Create a load balancer. 
 
-3.2 Create a launch configuration or a launch template. 
+  * Create a launch configuration or a launch template. 
 
-3.3 Create an auto scaling group. 
+  * Create an auto scaling group. 
 
-3.4 The expected behavior is: If you destroy one instance (or the application fails), another must be created automatically with the application running again.  
+  * The expected behavior is: If you destroy one instance (or the application fails), another must be created automatically with the application running again.  
 
 **Note:** If the application has any external service, like a database or cache system, you can either use a managed service by AWS (as RDS for SQL databases, or Amazon DocumentDB for MongoDB, etc.) Or install and manage the service by yourself. In a real production environment, we usually use managed services, but it's a great learning exercise to create all things by yourself. So, if you think you have time, we recommend following the second option, you’ll learn tons of new stuff! 
 
