--- a/1. Linux_basics.md
+++ b/1. Linux_basics.md
@@ -8,4 +8,9 @@ Most of our day is spent in front of a GNU/Linux terminal configuring stuff, deb
 ---
 1. To complete this, you are required to complete the challenges listed in  https://cmdchallenge.com/.  
 
-**Note:** This challenge is optional. Feel free to skip it if you are comfortable with GNU/Linux commands.  
+**Note:** This challenge is optional. Feel free to skip it if you are comfortable with GNU/Linux commands. 
+
+
+### Recommended readings
+
+** Please, help!
