--- a/1. Linux_basics.md
+++ b/1. Linux_basics.md
@@ -11,6 +11,6 @@ Most of our day is spent in front of a GNU/Linux terminal configuring stuff, deb
 **Note:** This challenge is optional. Feel free to skip it if you are comfortable with GNU/Linux commands. 
 
 
-### Recommended readings
+## Recommended readings
 
 ** Please, help!
