--- a/5.cloud-basics.md
+++ b/5.cloud-basics.md
@@ -3,10 +3,10 @@
 The aim of this challenge is to set up the cloud environment on which the project will run. 
 
 
-1. Create a diagram that reflects the design of the infrastructure you will create in the next steps.  
+1. **Create a diagram** that reflects the design of the infrastructure you will create in the next steps.  
 
 
-2. Create the **networking infrastructure** on which your application will live.  
+2. **Create the networking infrastructure** on which your application will live.  
 
   * Setup a custom VPC. 
   
@@ -21,7 +21,7 @@ The aim of this challenge is to set up the cloud environment on which the projec
   **Note:** Because of constrains with the training AWS account, you may be required to use an existing networking infrastructure. In that case, explain your tutor each the elements involved and how they relate to each other. Make sure you don’t skip this step; networking is an essential part of what we do! 
 
 
-3. We will create the ec2 infrastructure to support the application. If the application has one backend and one fronted, you will need to create one for each.  
+3. **Create the ec2 infrastructure to support the application.** If the application has one backend and one fronted, you will need to create one for each.  
 
   * Create a load balancer. 
 
@@ -35,11 +35,11 @@ The aim of this challenge is to set up the cloud environment on which the projec
 
 
 
-4. Secure your infrastructure. Don’t forget to always follow the principle of least privilege. 
+4. **Secure your infrastructure.** Don’t forget to always follow the principle of least privilege. 
 
  * Create security groups for all your resources (Instances, database, etc.). Decide carefully which ports you open and who can access them. 
 
  * Create IAM policies and roles to assign permissions to the applications.
 
 
-5. Create an Excel sheet with an estimate of the **total cost**  of the infrastructure you created.
+5. **Create an Excel sheet with an estimate of the total cost**  of the infrastructure you created.
