--- a/5.cloud-basics.md
+++ b/5.cloud-basics.md
@@ -43,3 +43,7 @@ The aim of this challenge is to set up the cloud environment on which the projec
 
 
 5. **Create an Excel sheet with an estimate of the total cost**  of the infrastructure you created.
+
+## Recommended readings
+
+** Please, help!
