--- a/7.configuration_management.md
+++ b/7.configuration_management.md
@@ -15,4 +15,4 @@ In this challenge you’ll need to replicate the configurations you made in the 
 
 2. Just like the Scripting challenge, **create the code to provision your instance** with everything the app needs to work but, in this case, using the tool you chose. 
 
-3. Remember that your instances are now in the cloud and they should be disposable, meaning **you should be able to destroy and recreate them anytime you want.** Your implementation needs to able to detect if a new instance was created and configure it accordingly. 
+3. Remember that your instances are now in the cloud and they should be disposable, meaning you should be able to destroy and recreate them anytime you want. **Your implementation needs to able to detect if a new instance was created and configure it accordingly.**
