--- a/6.infrastructure_as_code.md
+++ b/6.infrastructure_as_code.md
@@ -7,8 +7,8 @@ This may seem as something really difficult, but believe me, if you have a solid
 ---
 For this challenge you will have to replicate what you did in the last challenge (Cloud basics) but using IaC: 
 
-1. Choose an IaC tool. Learn about the options out there to implement this, and choose the one that you like the most.  
+1. **Choose an IaC tool.** Learn about the options out there to implement this, and choose the one that you like the most.  
 
-2. Implement all your infrastructure as code. Now, you must be able to completely destroy and create your infrastructure again using a single (or a couple of) command(s). Research and follow some of the best practices for the tool you chose (like the use of modules or the manage of the state in terraform). Now you don’t have any excuses to shutdown you infra at nights! 
+2. **Implement all your infrastructure as code.** Now, you must be able to completely destroy and create your infrastructure again using a single (or a couple of) command(s). Research and follow some of the best practices for the tool you chose (like the use of modules or the manage of the state in terraform). Now you don’t have any excuses to shutdown you infra at nights! 
 
-3. Always use a VCS! You can use the same repository that you use for the apps, or you can create a new one for this, or do both. Do whatever you think is the best for the project! 
+3. **Always use a VCS!** You can use the same repository that you use for the apps, or you can create a new one for this, or do both. Do whatever you think is the best for the project! 
