Fixing some spelling and adding apps section in main README

--- a/1.linux_basics.md
+++ b/1.linux_basics.md
@@ -2,14 +2,12 @@
 
 Most of our day is spent in front of a GNU/Linux terminal configuring stuff, debugging, reading logs, etc. You don’t need to be the greatest expert in an operating system, but you must feel comfortable typing commands in front of a terminal and you must understand the basics about how GNU/Linux works.  
 
- 
-**Note:** We are tool agnostic, so, feel free to choose the operating system that you want (e.g., Windows server). However, GNU/Linux is the most widely used operating system around the world; most of the systems that you’ll encounter during your career (at least in this decade) are going to be GNU/Linux servers (unless someone makes something better). 
+**Note:** We are tool agnostic, so, feel free to choose the operating system that you want (e.g., Windows server). However, GNU/Linux is the most widely used operating system around the world; most of the systems that you’ll encounter during your career (at least in this decade) are going to be GNU/Linux servers (unless someone makes something better).
 
 ---
-1. To complete this, you are required to complete the challenges listed in  https://cmdchallenge.com/.  
 
-**Note:** This challenge is optional. Feel free to skip it if you are comfortable with GNU/Linux commands. 
+1. To complete this, you are required to complete the challenges listed in <https://cmdchallenge.com/>.
 
+**Note:** This challenge is optional. Feel free to skip it if you are comfortable with GNU/Linux commands.
 
 ## Recommended readings
-
