--- a/4.scm.md
+++ b/4.scm.md
@@ -1,21 +1,19 @@
 # Source Code Management – SCM
 
- 
-Now that we have some basics Ops skills, it’s time to focus a little bit more in the Dev side of DevOps.  
+Now that we have some basics Ops skills, it’s time to focus a little bit more on the Dev side of DevOps.  
 
- Every serious software project, independence of how large or small it is, needs to be managed by a version control system (VCS).  One of the central aspects to success on any DevOps implementation is the management of the source code. Without this, implementing practices like CI/CD would be impossible. Remember this: **Everything should be versionable!** Even things like infrastructure and configuration.  
+ Every serious software project, independence of how large or small it is, needs to be managed by a version control system (VCS).  One of the central aspects of success on any DevOps implementation is the management of the source code. Without this, implementing practices like CI/CD would be impossible. Remember this: **Everything should be versionable!** Even things like infrastructure and configuration.  
 
-The most popular VCS, by far, is `git`, which is what we will focus. Again, you are free to choose whatever you want, but we recommend git. 
+The most popular VCS, by far, is `git`, which is what we will focus on. Again, you are free to choose whatever you want, but we recommend git.
 
 ---
 
-In this challenge you'll set up a successful git branching model for the project repository that we choose.  
+In this challenge, you'll set up a successful git branching model for the project repository that we choose.  
 
 1. **Search and read about the git branching model available in the industry.** Select the one that you think fits better with the project. Also, if you feel like making any change to the model, then, go ahead. Who knows, maybe it can become the next trend in the industry.  
 
-2. **Make a diagram explaining the branching model.** It doesn’t need to be pretty diagram, just to show the general idea of the model you chose. You can use a tool like draw.io or a simple pencil and paper. 
+2. **Make a diagram explaining the branching model.** It doesn’t need to be a pretty diagram, just to show the general idea of the model you chose. You can use a tool like draw.io or a simple pencil and paper.
 
-3. **Apply the branching model to the repositories.** You need to apply that strategy to every repository you’ll use for this RampUp. For example, if you decide to upload your scripts (refer to Scripting) of your infrastructure code (refer to IaC) in different repos, apply that strategy in every single one of those repos. Even of those repos are not created yet, when you do so, apply a branching strategy to them (it could be different though) 
+3. **Apply the branching model to the repositories.** You need to apply that strategy to every repository you’ll use for this RampUp. For example, if you decide to upload your scripts (refer to Scripting) of your infrastructure code (refer to IaC) in different repos, apply that strategy in every single one of those repos. Even of those repos are not created yet, when you do so, apply a branching strategy to them (it could be different though)
 
  ## Recommended readings
-
